Ensure the rating controls aren't clipped.

--- a/app/assets/stylesheets/components/rating.css.scss
+++ b/app/assets/stylesheets/components/rating.css.scss
@@ -27,7 +27,7 @@
   @include pad(top, medium);
   text-align: center;
   position: relative;
-  margin-top: 60px;
+  margin-top: 120px;
 }
 
 .rating__nav__links {
